Fix contrast issue with one color on the input label

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ html {
 }
 .searchForm__label {
   font-size: 2.2rem;
-  color: #9f86c0;
+  color: #51487a;
 }
 .searchForm__textInput {
   height: 3.75rem;
@@ -228,7 +228,7 @@ html {
   width: 100%;
   min-width: 280px;
   height: 30vh;
-  border: 1px solid #5e548e;
+  border: 1px solid #51487a;
   display: grid;
   align-content: center;
   justify-content: center;
@@ -239,7 +239,7 @@ html {
 }
 .gifSkeleton .skeleton__svg {
   font-size: 4rem;
-  color: #5e548e;
+  color: #51487a;
 }
 @media screen and (min-width: 800px) {
   .gifSkeleton {
@@ -248,7 +248,7 @@ html {
 }
 
 .loading {
-  border: 1px dashed #5e548e;
+  border: 1px dashed #51487a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -341,8 +341,8 @@ html {
 }
 
 .btn {
-  border: 1px solid #5e548e;
-  color: #5e548e;
+  border: 1px solid #51487a;
+  color: #51487a;
   padding: 1rem 0;
   border-radius: 4px;
   transition: 0.3s all, box-shadow 1ms;
