--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,6 +1,6 @@
 $yankees-blue: #231942;
-$purple-navy: #5e548e;
-$transparent-purple-navy: #5e548e29;
+$cyber-grape: #51487a;
+$transparent-cyber-grape: #5e548e29;
 $lavender-purple: #9f86c0;
 $pastel-violet: #be95c4;
 $pink-pearl: #e0b1cb;
