--- a/scss/components/loading.scss
+++ b/scss/components/loading.scss
@@ -1,7 +1,7 @@
 @use "../config.scss" as *;
 
 .loading {
-  border: 1px dashed $purple-navy;
+  border: 1px dashed $cyber-grape;
   display: flex;
   align-items: center;
   justify-content: center;
