--- a/scss/sections/searchSection.scss
+++ b/scss/sections/searchSection.scss
@@ -21,7 +21,7 @@
 
   &__label {
     font-size: 2.2rem;
-    color: $lavender-purple;
+    color: $cyber-grape;
   }
 
   &__textInput {
